tests-system/rbt-tuple-optional-fields/output
z Integer
  ^^^^^^^ rbt-tuple-optional-fields/foo.rsl:8: error: expected keyword optional, encountered identifier instead
Processed 1 model, 0 checks and 0 requirement files and found 1 error
